# debouncer-udevmon

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  debouncer.c  debouncer.h  makefile  udevmon.yaml
.github/workflows/: rust-test.yaml
src/: input.rs  main.rs  utils.rs
